@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model

class Organization {
    name
    vatNumber
    website
    phoneNumber
    email
}

class Employee {
    name
    admissionDate
    birthDate
    address
    contactInfo
    IdDocType
    IdNumber
}

class HRM{

}

class Job{
    job name
}

Organization "1" -- "*" Employee : "has >"
HRM --|> Employee
HRM "1" -- "*" Job : "registers >"

@enduml